--- a/hola/Dockerfile
+++ b/hola/Dockerfile
@@ -6,6 +6,9 @@ WORKDIR /app
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
+
+# Copia el archivo .env al contenedor
+COPY .env .env
 COPY . .
 
 EXPOSE 5000
