--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   web:
-    build: ./hola
-    startCommand: python app.py
+    type: web
+    env: docker
     envVars:
       - key: FLASK_ENV
         value: production
@@ -9,10 +9,6 @@ services:
         sync: false  # Esta variable se debe configurar en Render dashboard
       - key: SECRET_KEY
         generateValue: true  # Render generará una clave secreta automáticamente
-    ports:
-      - 5000
-    healthCheckPath: /
-    autoDeploy: true
     disk:
       name: sqlite-data
       mountPath: /app
